--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hotelBooking",
+  "name": "hoodzpronos",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,18 +11,23 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "react": "^17.0.2",
-    "react-native": "^0.65.1",
+    "react-native": "^0.69.1",
     "react-native-anchor-carousel": "^4.0.1",
+    "react-native-curved-bottom-bar": "^1.7.9",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.12.1",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-vector-icons": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
